--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Code Quiz</title>
 		<meta charset="UTF-8">
-		<link href="./Assets/quiz.css" rel="stylesheet" type="text/css">
-        <script src = "script.js" type="text/javascript"></script>
+		<link href="./Assets/style.css" rel="stylesheet" type="text/css">
+        <script src = "./Assets/script.js" type="text/javascript"></script>
     </head>
     
 	<body>
